--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+     <!-- <script src="question1.js"></script> -->
+     <!-- <script src="question2.js"></script> -->
+     <!-- <script src="question3.js"></script> -->
+     <!-- <script src="question4.js"></script> -->
+     <script src="question5.js"></script>
 </body>
 </html>
